# streamingcommunity-unofficialapi

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
sc_uapi/: SCuapi.py
scuapi/: scuapi.py
src/: __init__.py  scuapi.py
tests/: pyproject.toml
