[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamingcommunity-unofficialapi"
version = "0.0.2.1"
authors = [
  { name="Beqir Stafa", email="beqirstafa@gmail.com" },
]
description = "A simple unofficial api for the italian StreamingCommunity website"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

