[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where=["sc_uapi"]

[project]
name = "streamingcommunity-unofficialapi"
version = "0.0.3"
authors = [
  { name="Beqir Stafa", email="beqirstafa@gmail.com" },
]
description = "A simple unofficial api for the italian StreamingCommunity website"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Blu-Tiger/streamingcommunity-unofficialapi"